[HOPSWORKS-2979] Upgrade to KServe

--- a/notebooks/ml/serving/kserve/python/model_serving_kserve_sklearn_with_predictor_and_transformer.ipynb
+++ b/notebooks/ml/serving/kserve/python/model_serving_kserve_sklearn_with_predictor_and_transformer.ipynb
@@ -5,7 +5,7 @@
       "metadata": {},
       "source": [
         "---\n",
-        "title: \"Model Serving with Docker/Kubernetes and Scikit-learn - Iris Flower Classification\"\n",
+        "title: \"Model Serving with KServe, Scikit-learn, Predictors and Transformers - Iris Flower Classification\"\n",
         "date: 2021-01-10\n",
         "type: technical_note\n",
         "draft: false\n",
@@ -16,11 +16,11 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "# Model Serving with Docker/Kubernetes and Scikit-learn - Iris Flower Classification\n",
+        "# Model Serving with KServe, Scikit-learn, Predictors and Transformers - Iris Flower Classification\n",
         "---\n",
-        "*INPUT --> PREDICTOR (MODEL) --> PREDICTION*\n",
+        "*INPUT --> TRANSFORMER --> ENRICHED INPUT --> PREDICTOR (MODEL) --> PREDICTION*\n",
         "\n",
-        "Serving scikit-learn models with Docker or Kubernetes requires the implementation of a **predictor** script (i.e., python script) that implements the *Predict* class."
+        "<font color='red'> <h3>This notebook requires KServe to be installed</h3></font>"
       ]
     },
     {
@@ -34,17 +34,18 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "## Model Serving on [Hopsworks](https://github.com/logicalclocks/hopsworks) \n",
+        "## Model Serving on [Hopsworks](https://github.com/logicalclocks/hopsworks)\n",
+        "\n",
         "![hops.png](../../../images/hops.png)\n",
         "\n",
-        "### The `hops` python library\n",
+        "## The `hops` python library\n",
         "\n",
         "`hops` is a helper library for Hops that facilitates development by hiding the complexity of running applications and iteracting with services.\n",
         "\n",
         "Have a feature request or encountered an issue? Please let us know on <a href=\"https://github.com/logicalclocks/hops-util-py\">github</a>.\n",
         "\n",
-        "#### Using the `hdfs` module\n",
-        "The `hdfs` module provides a method to get the path in HopsFS where your data is stored, namely by calling `hdfs.project_path()`. The path resolves to the root path for your project, which is the view that you see when you click `Data Sets` in HopsWorks. To point where your actual data resides in the project you to append the full path from there to your Dataset. For example, if you create a _iris_flower_ folder in your Resources Dataset, the path to the iris_flower data would be `hdfs.project_path() + 'Resources/iris_flower'`\n",
+        "### Using the `hdfs` module\n",
+        "The `hdfs` module provides a method to get the path in HopsFS where your data is stored, namely by calling `hdfs.project_path()`. The path resolves to the root path for your project, which is the view that you see when you click `Data Sets` in HopsWorks. To point where your actual data resides in the project you to append the full path from there to your Dataset. For example if you create a mnist folder in your Resources Dataset, the path to the mnist data would be `hdfs.project_path() + 'Resources/mnist'`\n",
         "\n",
         "```python\n",
         "# Use this module to get the path to your project in HopsFS, then append the path to your Dataset in your project\n",
@@ -67,13 +68,8 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "## Serve the Iris Flower classifier"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {},
-      "source": [
+        "## Serve the Iris Flower classifier\n",
+        "\n",
         "#### Predictor script\n",
         "\n",
         "To serve a Scikit-Learn Model, write a predictor script in Python that downloads the HDFS model in the constructor and saves it as a class variable and then implements the `Predict` class and the methods `predict`, `classify` and `regress`, like this:"
@@ -120,7 +116,31 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "### Query Model Registry for best Iris Flower Classifier Model"
+        "#### Transformer script\n",
+        "\n",
+        "To serve a model with a transformer, write a python script that implements the `Transformer` class and the methods `preprocess` and `postprocess`, like this:\n",
+        "\n",
+        "```python\n",
+        "class Transformer(object):\n",
+        "    def __init__(self):\n",
+        "        print(\"[Transformer] Initializing...\")\n",
+        "        # Initialization code goes here\n",
+        "\n",
+        "    def preprocess(self, inputs):\n",
+        "        # Transform the request inputs here. The object returned by this method will be used as model input.\n",
+        "        return inputs\n",
+        "\n",
+        "    def postprocess(self, outputs):\n",
+        "        # Transform the predictions computed by the model before returning a response.\n",
+        "        return outputs\n",
+        "```"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "### Query Model Repository for best IrisFlowerClassifier Model"
       ]
     },
     {
@@ -154,7 +174,7 @@
           "text": [
             "Model name: irisflowerclassifier\n",
             "Model version: 1\n",
-            "Model metrics: {'accuracy': '0.98'}\n"
+            "{'accuracy': '0.98'}\n"
           ]
         }
       ],
@@ -166,21 +186,16 @@
         "\n",
         "print('Model name: ' + best_model.name)\n",
         "print('Model version: ' + str(best_model.version))\n",
-        "print('Model metrics: ' + str(best_model.training_metrics))"
+        "print(best_model.training_metrics)"
       ]
     },
     {
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "### Create Model Serving of Exported Model"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {},
-      "source": [
-        "Once all the files have been exported to the model directory (see _end_to_end_sklearn.ipynb_), we can create a serving instance that points to the model files using `serving.create_or_update()`"
+        "### Create Model Serving of Exported Model\n",
+        "\n",
+        "Once all the files are in the file system, we can create a serving instance that points to the model files using `serving.create_or_update()`"
       ]
     },
     {
@@ -202,7 +217,7 @@
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "2022-01-17 13:54:17,928 INFO: Serving irisflowerclassifier successfully created\n"
+            "2022-01-17 16:11:41,169 INFO: Serving irisflowerclassifier successfully created\n"
           ]
         }
       ],
@@ -210,17 +225,20 @@
         "# Create serving\n",
         "SERVING_NAME = MODEL_NAME\n",
         "\n",
-        "SCRIPT_PATH = hdfs.project_path() + \"/Jupyter/serving/docker_and_kubernetes/python/predictor.py\" # or .ipynb\n",
+        "PREDICTOR_SCRIPT_PATH = hdfs.project_path() + \"/Jupyter/serving/kserve/python/predictor.py\" # or .ipynb\n",
+        "TRANSFORMER_SCRIPT_PATH = hdfs.project_path() + \"/Jupyter/serving/kserve/python/transformer.py\" # or .ipynb\n",
         "\n",
         "serving.create_or_update(SERVING_NAME, # define a name for the serving instance\n",
         "                         model_path=best_model.model_path, # set the path of the model to be deployed\n",
         "                         model_server=\"PYTHON\", # set the model server to run the model\n",
-        "                         predictor=SCRIPT_PATH, # set the predictor to load the model and make predictions\n",
+        "                         kserve=True, # enable KServe\n",
+        "                         predictor=PREDICTOR_SCRIPT_PATH, # set the predictor to load the model and make predictions\n",
+        "                         transformer=TRANSFORMER_SCRIPT_PATH, # set the path to the transformer script\n",
+        "                         transformer_instances=1, # with KServe, set 0 instances to leverage scale-to-zero capabilities\n",
         "                         # optional arguments\n",
         "                         model_version=best_model.version, # set the version of the model to be deployed\n",
-        "                         kserve=False, # the model will be served either with Docker or Kubernetes depending on the Hopsworks version\n",
         "                         topic_name=\"CREATE\", # topic name or CREATE to create a new topic for inference logging, otherwise NONE\n",
-        "                         instances=1 # number of replicas\n",
+        "                         instances=1, # number of replicas\n",
         "                         )"
       ]
     },
@@ -230,7 +248,7 @@
       "source": [
         "Once the serving instance is created, it will be shown in the \"Model Serving\" tab in the Hopsworks UI. You can view detailed information like server-logs and which Kafka Topic it is logging inference requests to.\n",
         "\n",
-        "![docker_sklearn_predictor_details.gif](./../../../images/docker_sklearn_predictor_details.gif)"
+        "![kserve_python_pred_trans_details](./../../../images/kserve_python_pred_trans_details.gif)"
       ]
     },
     {
@@ -257,13 +275,14 @@
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "Info: \tid: 1053,\n",
+            "Info: \tid: 1057,\n",
             "        model_path: /Projects/demo_ml_meb10000/Models/irisflowerclassifier,\n",
             "        model_version: 1,\n",
-            "        artifact_version: 1,\n",
+            "        artifact_version: 4,\n",
             "        predictor: predictor.py,\n",
+            "        transformer: transformer.py,\n",
             "        model_server: PYTHON,\n",
-            "        serving_tool: DEFAULT\n"
+            "        serving_tool: KSERVE\n"
           ]
         }
       ],
@@ -273,6 +292,7 @@
         "       model_version: {},\\n \\\n",
         "       artifact_version: {},\\n \\\n",
         "       predictor: {},\\n \\\n",
+        "       transformer: {},\\n \\\n",
         "       model_server: {},\\n \\\n",
         "       serving_tool: {}\".format(\n",
         "    serving.get_id(SERVING_NAME),\n",
@@ -280,6 +300,7 @@
         "    serving.get_model_version(SERVING_NAME),\n",
         "    serving.get_artifact_version(SERVING_NAME),\n",
         "    serving.get_predictor(SERVING_NAME),\n",
+        "    serving.get_transformer(SERVING_NAME),\n",
         "    serving.get_model_server(SERVING_NAME),\n",
         "    serving.get_serving_tool(SERVING_NAME)))"
       ]
@@ -346,7 +367,7 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "Start the serving instance"
+        "Start new serving"
       ]
     },
     {
@@ -358,7 +379,7 @@
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "2022-01-12 13:06:13,171 INFO: Serving with name: irisflowerclassifier successfully started\n"
+            "2022-01-12 13:40:31,332 INFO: Serving with name: irisflowerclassifier successfully started\n"
           ]
         }
       ],
@@ -370,7 +391,7 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "Wait until serving instance is up and running"
+        "Wait until serving is up and running"
       ]
     },
     {
@@ -390,21 +411,16 @@
       "source": [
         "### Check the Server Logs\n",
         "\n",
-        "You can access the server logs using Kibana by clicking on the 'Show logs' button in the action bar, and filter them using fields such as serving component (i.e., predictor or transformer) or container name among other things."
+        "You can access the server logs using Kibana by clicking on the 'Show logs' button in the action bar, and filter them using fields such as serving component (i.e., predictor or transformer) or container name among other things.\n",
+        "\n",
+        "![kserve_python_pred_trans_logs](./../../../images/kserve_python_pred_trans_logs.gif)"
       ]
     },
     {
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "![docker_sklearn_predictor_logs.gif](./../../../images/docker_sklearn_predictor_logs.gif)"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {},
-      "source": [
-        "### Send Prediction Requests to the Online Model using Hopsworks REST API"
+        "### Send Prediction Requests to the Served Model using Hopsworks REST API"
       ]
     },
     {
@@ -424,6 +440,9 @@
           "output_type": "stream",
           "text": [
             "{'predictions': [2]}\n",
+            "{'predictions': [1]}\n",
+            "{'predictions': [2]}\n",
+            "{'predictions': [1]}\n",
             "{'predictions': [2]}\n",
             "{'predictions': [2]}\n",
             "{'predictions': [2]}\n",
@@ -431,18 +450,15 @@
             "{'predictions': [2]}\n",
             "{'predictions': [2]}\n",
             "{'predictions': [1]}\n",
+            "{'predictions': [2]}\n",
+            "{'predictions': [2]}\n",
+            "{'predictions': [2]}\n",
+            "{'predictions': [0]}\n",
             "{'predictions': [0]}\n",
             "{'predictions': [2]}\n",
             "{'predictions': [2]}\n",
             "{'predictions': [2]}\n",
-            "{'predictions': [2]}\n",
-            "{'predictions': [1]}\n",
-            "{'predictions': [1]}\n",
-            "{'predictions': [2]}\n",
-            "{'predictions': [0]}\n",
-            "{'predictions': [1]}\n",
-            "{'predictions': [1]}\n",
-            "{'predictions': [2]}\n"
+            "{'predictions': [1]}\n"
           ]
         }
       ],
@@ -534,25 +550,20 @@
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "serving: irisflowerclassifier, version: 1, timestamp: 1641993001908,\n",
-            "        http_response_code: 200, model_server: PYTHON, serving_tool: DEFAULT\n",
-            "predictions: 2\n",
+            "INFO -> servingId: 3, modelName: irisflowerclassifier, modelVersion: 1,requestTimestamp: 1641994886, inferenceId:0e9dc5b9-6e34-4b58-b5d2-40f91653a764, messageType:response\n",
+            "Predictions -> [2]\n",
             "\n",
-            "serving: irisflowerclassifier, version: 1, timestamp: 1641993001907,\n",
-            "        http_response_code: 200, model_server: PYTHON, serving_tool: DEFAULT\n",
-            "predictions: 2\n",
+            "INFO -> servingId: 3, modelName: irisflowerclassifier, modelVersion: 1,requestTimestamp: 1641994886, inferenceId:074e585a-9e7d-4b9a-8862-6974a7fe9358, messageType:response\n",
+            "Predictions -> [1]\n",
             "\n",
-            "serving: irisflowerclassifier, version: 1, timestamp: 1641993001909,\n",
-            "        http_response_code: 200, model_server: PYTHON, serving_tool: DEFAULT\n",
-            "predictions: 2\n",
+            "INFO -> servingId: 3, modelName: irisflowerclassifier, modelVersion: 1,requestTimestamp: 1641994886, inferenceId:dff9797f-1987-4849-b076-2cf7ba8fd833, messageType:response\n",
+            "Predictions -> [2]\n",
             "\n",
-            "serving: irisflowerclassifier, version: 1, timestamp: 1641993002028,\n",
-            "        http_response_code: 200, model_server: PYTHON, serving_tool: DEFAULT\n",
-            "predictions: 2\n",
+            "INFO -> servingId: 3, modelName: irisflowerclassifier, modelVersion: 1,requestTimestamp: 1641994886, inferenceId:851a394f-f884-4008-88c6-11c7cd5d926b, messageType:response\n",
+            "Predictions -> [1]\n",
             "\n",
-            "serving: irisflowerclassifier, version: 1, timestamp: 1641993002397,\n",
-            "        http_response_code: 200, model_server: PYTHON, serving_tool: DEFAULT\n",
-            "predictions: 2\n",
+            "INFO -> servingId: 3, modelName: irisflowerclassifier, modelVersion: 1,requestTimestamp: 1641994887, inferenceId:cd416ea2-9f56-45a6-bca6-e5ce5bcb996c, messageType:response\n",
+            "Predictions -> [2]\n",
             "\n"
           ]
         }
@@ -561,27 +572,32 @@
         "PRINT_INSTANCES=False\n",
         "PRINT_PREDICTIONS=True\n",
         "\n",
-        "for i in range(0, 5):\n",
+        "for i in range(0, 10):\n",
         "    msg = consumer.poll(timeout=5.0)\n",
         "    if msg is not None:\n",
         "        value = msg.value()\n",
         "        try:\n",
-        "            event_dict = kafka.parse_avro_msg(value, avro_schema)\n",
+        "            event_dict = kafka.parse_avro_msg(value, avro_schema)  \n",
+        "            payload = json.loads(event_dict[\"payload\"])\n",
         "            \n",
-        "            print(\"serving: {}, version: {}, timestamp: {},\\n\"\\\n",
-        "                  \"        http_response_code: {}, model_server: {}, serving_tool: {}\".format(\n",
+        "            if (event_dict['messageType'] == \"request\" and not PRINT_INSTANCES) or \\\n",
+        "                (event_dict['messageType'] == \"response\" and not PRINT_PREDICTIONS):\n",
+        "                continue\n",
+        "            \n",
+        "            print(\"INFO -> servingId: {}, modelName: {}, modelVersion: {},\"\\\n",
+        "                  \"requestTimestamp: {}, inferenceId:{}, messageType:{}\".format(\n",
+        "                       event_dict[\"servingId\"],\n",
         "                       event_dict[\"modelName\"],\n",
         "                       event_dict[\"modelVersion\"],\n",
         "                       event_dict[\"requestTimestamp\"],\n",
-        "                       event_dict[\"responseHttpCode\"],\n",
-        "                       event_dict[\"modelServer\"],\n",
-        "                       event_dict[\"servingTool\"]))\n",
-        "            \n",
-        "            if PRINT_INSTANCES:\n",
-        "                print(\"instances: {}\\n\".format(event_dict[\"inferenceRequest\"]))\n",
-        "            if PRINT_PREDICTIONS:\n",
-        "                prediction = json.loads(event_dict[\"inferenceResponse\"])[\"predictions\"][0]\n",
-        "                print(\"predictions: {}\\n\".format(prediction))\n",
+        "                       event_dict[\"inferenceId\"],\n",
+        "                       event_dict[\"messageType\"]))\n",
+        "\n",
+        "            if event_dict['messageType'] == \"request\":\n",
+        "                print(\"Instances -> {}\\n\".format(payload['instances']))\n",
+        "                \n",
+        "            if event_dict['messageType'] == \"response\":\n",
+        "                print(\"Predictions -> {}\\n\".format(payload['predictions']))\n",
         "\n",
         "        except Exception as e:\n",
         "            print(\"A message was read but there was an error parsing it\")\n",
