--- a/notebooks/ml/serving/kserve/sklearn/model_serving_kserve_sklearn.ipynb
+++ b/notebooks/ml/serving/kserve/sklearn/model_serving_kserve_sklearn.ipynb
@@ -5,8 +5,8 @@
       "metadata": {},
       "source": [
         "---\n",
-        "title: \"Model Serving with Docker/Kubernetes and Tensorflow - MNIST Classification\"\n",
-        "date: 2022-01-10\n",
+        "title: \"Model Serving with KServe and Scikit-learn - Iris Flower Classification\"\n",
+        "date: 2021-01-10\n",
         "type: technical_note\n",
         "draft: false\n",
         "---"
@@ -16,16 +16,18 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "# Model Serving with Docker/Kubernetes and Tensorflow - MNIST Classification\n",
+        "# Model Serving with KServe and Scikit-Learn - Iris Flower Classification\n",
         "---\n",
-        "*INPUT --> MODEL --> PREDICTION*"
+        "*INPUT --> MODEL --> PREDICTION*\n",
+        "\n",
+        "<font color='red'> <h3>This notebook requires KServe to be installed</h3></font>"
       ]
     },
     {
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "> **NOTE:** It is assumed that a model called *mnist* is already available in Hopsworks. An example of training a model for the *MNIST handwritten digit classification problem* is available in `Jupyter/end_to_end_pipelines/tensorflow/end_to_end_tensorflow.ipynb`"
+        "> **NOTE:** It is assumed that a model called *irisflowerclassifier* is already available in Hopsworks. An example of training a model for the *Iris flower classification problem* is available in `Jupyter/end_to_end_pipelines/sklearn/end_to_end_sklearn.ipynb`"
       ]
     },
     {
@@ -47,14 +49,14 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "## Serve the MNIST classifier"
+        "## Serve the Iris Flower classifier"
       ]
     },
     {
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "### Query Model Registry for best Mnist Model"
+        "### Query Model Registry for best Iris Classifier Model"
       ]
     },
     {
@@ -86,14 +88,14 @@
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "Model name: mnist_e2e\n",
+            "Model name: irisflowerclassifier\n",
             "Model version: 1\n",
-            "{'accuracy': '0.625'}\n"
+            "{'accuracy': '0.98'}\n"
           ]
         }
       ],
       "source": [
-        "MODEL_NAME=\"mnist_e2e\"\n",
+        "MODEL_NAME=\"irisflowerclassifier\"\n",
         "EVALUATION_METRIC=\"accuracy\"\n",
         "\n",
         "best_model = mr.get_best_model(MODEL_NAME, EVALUATION_METRIC, \"max\")\n",
@@ -128,21 +130,22 @@
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "2022-01-28 11:45:02,168 INFO: Serving mniste2e successfully created\n"
+            "2022-01-17 15:14:07,102 INFO: Serving irisflowerclassifier successfully created\n"
           ]
         }
       ],
       "source": [
         "# Create serving instance\n",
-        "SERVING_NAME = \"mniste2e\"\n",
+        "SERVING_NAME = MODEL_NAME\n",
         "\n",
         "response = serving.create_or_update(SERVING_NAME, # define a name for the serving instance\n",
         "                                    model_path=best_model.model_path, # set the path of the model to be deployed\n",
-        "                                    model_server=\"TENSORFLOW_SERVING\", # set the model server to run the model\n",
+        "                                    model_server=\"PYTHON\", # set the model server to run the model\n",
+        "                                    kserve=True, # whether to serve the model using KServe or the default tool in the current Hopsworks version\n",
         "                                    # optional arguments\n",
         "                                    model_version=best_model.version, # set the version of the model to be deployed\n",
-        "                                    kserve=False, # the model will be served either with Docker or Kubernetes depending on the Hopsworks version\n",
         "                                    topic_name=\"CREATE\", # (optional) set the topic name or CREATE to create a new topic for inference logging\n",
+        "                                    inference_logging=\"ALL\", # with KServe, select the type of inference data to log into Kafka, e.g MODEL_INPUTS, PREDICTIONS or ALL\n",
         "                                    instances=1, # with KServe, set 0 instances to leverage scale-to-zero capabilities\n",
         "                                    )"
       ]
@@ -151,7 +154,9 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "Once the serving instance is created, it will be shown in the \"Model Serving\" tab in the Hopsworks UI. You can view detailed information like server-logs and which Kafka Topic it is logging inference requests to."
+        "Once the serving instance is created, it will be shown in the \"Model Serving\" tab in the Hopsworks UI. You can view detailed information like server-logs and which Kafka Topic it is logging inference requests to.\n",
+        "\n",
+        "![kserve_sklearn_modelonly_details.gif](../../../images/kserve_sklearn_modelonly_details.gif)"
       ]
     },
     {
@@ -178,12 +183,12 @@
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "Info: \tid: 31,\n",
-            "        model_path: /Projects/demo_ml_meb10000/Models/mnist_e2e,\n",
+            "Info: \tid: 2523,\n",
+            "        model_path: /Projects/demo_ml_meb10000/Models/irisflowerclassifier,\n",
             "        model_version: 1,\n",
             "        artifact_version: 0,\n",
-            "        model_server: TENSORFLOW_SERVING,\n",
-            "        serving_tool: DEFAULT\n"
+            "        model_server: PYTHON,\n",
+            "        serving_tool: KSERVE\n"
           ]
         }
       ],
@@ -211,7 +216,7 @@
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "mniste2e\n"
+            "irisflowerclassifier\n"
           ]
         }
       ],
@@ -224,7 +229,7 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "## Classify Digits with the MNIST Classifier"
+        "## Classify flowers with the Iris Flower classifier"
       ]
     },
     {
@@ -243,7 +248,8 @@
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "2022-01-28 11:45:03,776 INFO: Serving with name: mniste2e successfully started\n"
+            "Starting serving with name: irisflowerclassifier...\n",
+            "Serving with name: irisflowerclassifier successfully started\n"
           ]
         }
       ],
@@ -268,14 +274,16 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "### Check Model Serving for active servings"
+        "### Check the Server Logs\n",
+        "\n",
+        "You can access the server logs using Kibana by clicking on the 'Show logs' button in the action bar, and filter them using fields such as serving component (i.e., predictor or transformer) or container name among other things."
       ]
     },
     {
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "![Image7-Monitor.png](../../../images/servings.gif)"
+        "![kserve_sklearn_modelonly_logs.gif](./../../../images/kserve_sklearn_modelonly_logs.gif)"
       ]
     },
     {
@@ -287,46 +295,44 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 10,
+      "execution_count": 9,
       "metadata": {},
       "outputs": [
         {
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "{'predictions': [[0.00572621496, 0.108208649, 0.27227217, 0.0510373078, 0.299194, 0.0186527651, 0.0198455323, 0.0278544612, 0.152300492, 0.0449083634]]}\n",
-            "{'predictions': [[0.0046633645, 0.0414372683, 0.291441888, 0.0312344842, 0.444997281, 0.0112954751, 0.014659116, 0.0170055088, 0.113880813, 0.0293848235]]}\n",
-            "{'predictions': [[0.0076998882, 0.0302102603, 0.235633671, 0.0153572187, 0.287438601, 0.0136197172, 0.0237444546, 0.0156203927, 0.322000772, 0.0486749858]]}\n",
-            "{'predictions': [[0.0108826989, 0.0823879838, 0.210901648, 0.0343613736, 0.331943542, 0.0128106838, 0.0406103022, 0.0279905479, 0.179413438, 0.0686978]]}\n",
-            "{'predictions': [[0.0109353121, 0.0673055351, 0.39981252, 0.0546917692, 0.294156522, 0.0124330763, 0.0245132856, 0.0148018971, 0.0674069598, 0.0539430939]]}\n",
-            "{'predictions': [[0.0114273727, 0.0790175945, 0.13507475, 0.0827436745, 0.370159179, 0.00988207199, 0.0314267166, 0.0309457481, 0.195226014, 0.0540968478]]}\n",
-            "{'predictions': [[0.0133531187, 0.0599063262, 0.247828186, 0.0464959219, 0.427820921, 0.0191995669, 0.0206612721, 0.0281933304, 0.0847786739, 0.0517626703]]}\n",
-            "{'predictions': [[0.00723468931, 0.111925527, 0.263983548, 0.0296120755, 0.357140779, 0.0177987386, 0.0169458222, 0.0362103, 0.104185537, 0.0549630672]]}\n",
-            "{'predictions': [[0.00825782213, 0.0608470626, 0.249044895, 0.0373915546, 0.354562044, 0.0104568275, 0.0274981633, 0.0231450014, 0.158275828, 0.0705208555]]}\n",
-            "{'predictions': [[0.0113548581, 0.0370724536, 0.236185282, 0.0362716, 0.245105356, 0.0161779951, 0.0189345255, 0.0334743597, 0.306493491, 0.0589301251]]}\n",
-            "{'predictions': [[0.00681277085, 0.11164733, 0.289175451, 0.0336382575, 0.261108965, 0.0185933951, 0.0239503831, 0.0405027345, 0.17715925, 0.0374115221]]}\n",
-            "{'predictions': [[0.0111160725, 0.0805897564, 0.239300177, 0.0385839716, 0.3445, 0.0188862346, 0.0326525047, 0.0327585265, 0.153218359, 0.0483945422]]}\n",
-            "{'predictions': [[0.00481388066, 0.0545748733, 0.238435447, 0.034287069, 0.353871942, 0.0114829037, 0.0271637905, 0.0178126022, 0.156495899, 0.101061471]]}\n",
-            "{'predictions': [[0.00633331668, 0.0470374823, 0.339952618, 0.0310638566, 0.306065679, 0.013985374, 0.0280421339, 0.0124483872, 0.154721156, 0.0603500269]]}\n",
-            "{'predictions': [[0.0117167076, 0.0657213852, 0.251739472, 0.0289249122, 0.410816878, 0.011261181, 0.040211603, 0.011705935, 0.13377139, 0.0341305584]]}\n",
-            "{'predictions': [[0.00604272867, 0.0362226181, 0.258314073, 0.0260963496, 0.358961761, 0.00796514843, 0.0122928983, 0.0202498324, 0.238217086, 0.0356375128]]}\n",
-            "{'predictions': [[0.00509981066, 0.0535564, 0.321242362, 0.0374574, 0.262698799, 0.0172182638, 0.0105276722, 0.0232814737, 0.194753274, 0.0741645545]]}\n",
-            "{'predictions': [[0.00960638188, 0.108674034, 0.268778, 0.0699506328, 0.185300842, 0.0157204196, 0.0365220755, 0.0281580407, 0.212751329, 0.0645382553]]}\n",
-            "{'predictions': [[0.00637084339, 0.0884655416, 0.20060347, 0.04854545, 0.203479424, 0.0286499448, 0.0381827056, 0.0213748738, 0.325430036, 0.0388977155]]}\n",
-            "{'predictions': [[0.00527361361, 0.0295326672, 0.279165745, 0.0256425422, 0.448510081, 0.0165301226, 0.0195797198, 0.0204584897, 0.122249223, 0.0330577828]]}\n"
+            "{'predictions': [2]}\n",
+            "{'predictions': [1]}\n",
+            "{'predictions': [2]}\n",
+            "{'predictions': [2]}\n",
+            "{'predictions': [0]}\n",
+            "{'predictions': [0]}\n",
+            "{'predictions': [2]}\n",
+            "{'predictions': [1]}\n",
+            "{'predictions': [2]}\n",
+            "{'predictions': [2]}\n",
+            "{'predictions': [2]}\n",
+            "{'predictions': [0]}\n",
+            "{'predictions': [2]}\n",
+            "{'predictions': [2]}\n",
+            "{'predictions': [2]}\n",
+            "{'predictions': [2]}\n",
+            "{'predictions': [2]}\n",
+            "{'predictions': [2]}\n",
+            "{'predictions': [2]}\n",
+            "{'predictions': [0]}\n"
           ]
         }
       ],
       "source": [
         "import json\n",
-        "import numpy as np\n",
+        "import random\n",
         "\n",
-        "NUM_FEATURES=784\n",
+        "NUM_FEATURES = 4\n",
         "\n",
         "for i in range(20):\n",
-        "    data = {\n",
-        "                \"signature_name\": \"serving_default\", \"instances\": [np.random.rand(NUM_FEATURES).tolist()]\n",
-        "            }\n",
+        "    data = {\"instances\" : [[random.uniform(1, 8) for i in range(NUM_FEATURES)]]}\n",
         "    response = serving.make_inference_request(SERVING_NAME, data)\n",
         "    print(response)"
       ]
@@ -340,7 +346,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 11,
+      "execution_count": 10,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -357,7 +363,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 12,
+      "execution_count": 11,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -379,7 +385,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 13,
+      "execution_count": 12,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -396,32 +402,27 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 14,
+      "execution_count": 13,
       "metadata": {},
       "outputs": [
         {
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "serving: mniste2e, version: 1, timestamp: 1643370334068,\n",
-            "        http_response_code: 200, model_server: TENSORFLOW_SERVING, serving_tool: DEFAULT\n",
-            "predictions: [0.00531054195, 0.0404060595, 0.290843785, 0.0300603732, 0.406977743, 0.012764995, 0.0235719737, 0.0228966139, 0.123488344, 0.0436795913]\n",
+            "INFO -> servingId: 2523, modelName: irisflowerclassifier, modelVersion: 1,requestTimestamp: 1641839298, inferenceId:9fff76ad-55e1-4c52-b0e9-7019ce79a249, messageType:response\n",
+            "Predictions -> [2]\n",
             "\n",
-            "serving: mniste2e, version: 1, timestamp: 1643370334060,\n",
-            "        http_response_code: 200, model_server: TENSORFLOW_SERVING, serving_tool: DEFAULT\n",
-            "predictions: [0.00717737712, 0.0555244572, 0.316040367, 0.0621430837, 0.293955833, 0.0159867015, 0.0470166355, 0.0125214364, 0.149252892, 0.0403812565]\n",
+            "INFO -> servingId: 2523, modelName: irisflowerclassifier, modelVersion: 1,requestTimestamp: 1641839298, inferenceId:03c8d155-cbb9-4907-bfc2-630d3777e56f, messageType:response\n",
+            "Predictions -> [1]\n",
             "\n",
-            "serving: mniste2e, version: 1, timestamp: 1643370334059,\n",
-            "        http_response_code: 200, model_server: TENSORFLOW_SERVING, serving_tool: DEFAULT\n",
-            "predictions: [0.00496881455, 0.0392289087, 0.340284616, 0.0283909775, 0.31322825, 0.0148269441, 0.0102977483, 0.0242117718, 0.158610448, 0.0659515]\n",
+            "INFO -> servingId: 2523, modelName: irisflowerclassifier, modelVersion: 1,requestTimestamp: 1641839298, inferenceId:cd45feb2-d1c1-43b6-a612-f0dffeaf0e01, messageType:response\n",
+            "Predictions -> [2]\n",
             "\n",
-            "serving: mniste2e, version: 1, timestamp: 1643370334060,\n",
-            "        http_response_code: 200, model_server: TENSORFLOW_SERVING, serving_tool: DEFAULT\n",
-            "predictions: [0.011219847, 0.0522725135, 0.23986721, 0.0267774705, 0.435368598, 0.00980452728, 0.0200000331, 0.022984853, 0.139044553, 0.0426604077]\n",
+            "INFO -> servingId: 2523, modelName: irisflowerclassifier, modelVersion: 1,requestTimestamp: 1641839298, inferenceId:4b14a25a-fed1-45cc-a994-a1b37ba55543, messageType:response\n",
+            "Predictions -> [2]\n",
             "\n",
-            "serving: mniste2e, version: 1, timestamp: 1643370334411,\n",
-            "        http_response_code: 200, model_server: TENSORFLOW_SERVING, serving_tool: DEFAULT\n",
-            "predictions: [0.00758659374, 0.076115191, 0.349409163, 0.0237191711, 0.286886334, 0.0122001776, 0.00834187213, 0.029796049, 0.148333102, 0.0576123595]\n",
+            "INFO -> servingId: 2523, modelName: irisflowerclassifier, modelVersion: 1,requestTimestamp: 1641839299, inferenceId:dbe84132-b0ce-4196-bd5c-da72f1607f45, messageType:response\n",
+            "Predictions -> [0]\n",
             "\n"
           ]
         }
@@ -430,27 +431,33 @@
         "PRINT_INSTANCES=False\n",
         "PRINT_PREDICTIONS=True\n",
         "\n",
-        "for i in range(0, 5):\n",
+        "for i in range(0, 10):\n",
         "    msg = consumer.poll(timeout=5.0)\n",
         "    if msg is not None:\n",
         "        value = msg.value()\n",
         "        try:\n",
-        "            event_dict = kafka.parse_avro_msg(value, avro_schema)\n",
+        "            event_dict = kafka.parse_avro_msg(value, avro_schema)  \n",
+        "            payload = json.loads(event_dict[\"payload\"])\n",
         "            \n",
-        "            print(\"serving: {}, version: {}, timestamp: {},\\n\"\\\n",
-        "                  \"        http_response_code: {}, model_server: {}, serving_tool: {}\".format(\n",
+        "            if (event_dict['messageType'] == \"request\" and not PRINT_INSTANCES) or \\\n",
+        "                (event_dict['messageType'] == \"response\" and not PRINT_PREDICTIONS):\n",
+        "                continue\n",
+        "            \n",
+        "            print(\"INFO -> servingId: {}, modelName: {}, modelVersion: {},\"\\\n",
+        "                  \"requestTimestamp: {}, inferenceId:{}, messageType:{}\".format(\n",
+        "                       event_dict[\"servingId\"],\n",
         "                       event_dict[\"modelName\"],\n",
         "                       event_dict[\"modelVersion\"],\n",
         "                       event_dict[\"requestTimestamp\"],\n",
-        "                       event_dict[\"responseHttpCode\"],\n",
-        "                       event_dict[\"modelServer\"],\n",
-        "                       event_dict[\"servingTool\"]))\n",
-        "            \n",
-        "            if PRINT_INSTANCES:\n",
-        "                print(\"instances: {}\\n\".format(event_dict[\"inferenceRequest\"]))\n",
-        "            if PRINT_PREDICTIONS:\n",
-        "                print(\"predictions: {}\\n\".format(json.loads(event_dict[\"inferenceResponse\"])[\"predictions\"][0]))\n",
-        "                      \n",
+        "                       event_dict[\"inferenceId\"],\n",
+        "                       event_dict[\"messageType\"]))\n",
+        "\n",
+        "            if event_dict['messageType'] == \"request\":\n",
+        "                print(\"Instances -> {}\\n\".format(payload['instances']))\n",
+        "                \n",
+        "            if event_dict['messageType'] == \"response\":\n",
+        "                print(\"Predictions -> {}\\n\".format(payload['predictions']))\n",
+        "\n",
         "        except Exception as e:\n",
         "            print(\"A message was read but there was an error parsing it\")\n",
         "            print(e)\n",
