--- a/notebooks/ml/serving/kserve/sklearn/transformer.ipynb
+++ b/notebooks/ml/serving/kserve/sklearn/transformer.ipynb
@@ -3,13 +3,12 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "90432584",
    "metadata": {},
    "outputs": [],
    "source": [
     "class Transformer(object):\n",
     "    def __init__(self):\n",
-    "        print(\"[Transformer] Initializing...\")\n",
+    "        print(\"Initializing transformer\")\n",
     "        # Initialization code goes here\n",
     "\n",
     "    def preprocess(self, inputs):\n",
