--- a/notebooks/ml/serving/kserve/python/model_serving_kserve_sklearn_with_predictor.ipynb
+++ b/notebooks/ml/serving/kserve/python/model_serving_kserve_sklearn_with_predictor.ipynb
@@ -5,7 +5,7 @@
       "metadata": {},
       "source": [
         "---\n",
-        "title: \"Model Serving with Docker/Kubernetes and Scikit-learn - Iris Flower Classification\"\n",
+        "title: \"Model Serving with KServe, Scikit-learn and Predictors - Iris Flower Classification\"\n",
         "date: 2021-01-10\n",
         "type: technical_note\n",
         "draft: false\n",
@@ -16,11 +16,11 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "# Model Serving with Docker/Kubernetes and Scikit-learn - Iris Flower Classification\n",
+        "# Model Serving with KServe, Scikit-learn and Predictors - Iris Flower Classification\n",
         "---\n",
         "*INPUT --> PREDICTOR (MODEL) --> PREDICTION*\n",
         "\n",
-        "Serving scikit-learn models with Docker or Kubernetes requires the implementation of a **predictor** script (i.e., python script) that implements the *Predict* class."
+        "<font color='red'> <h3>This notebook requires KServe to be installed</h3></font>"
       ]
     },
     {
@@ -34,17 +34,18 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "## Model Serving on [Hopsworks](https://github.com/logicalclocks/hopsworks) \n",
+        "## Model Serving on [Hopsworks](https://github.com/logicalclocks/hopsworks)\n",
+        "\n",
         "![hops.png](../../../images/hops.png)\n",
         "\n",
-        "### The `hops` python library\n",
+        "## The `hops` python library\n",
         "\n",
         "`hops` is a helper library for Hops that facilitates development by hiding the complexity of running applications and iteracting with services.\n",
         "\n",
         "Have a feature request or encountered an issue? Please let us know on <a href=\"https://github.com/logicalclocks/hops-util-py\">github</a>.\n",
         "\n",
-        "#### Using the `hdfs` module\n",
-        "The `hdfs` module provides a method to get the path in HopsFS where your data is stored, namely by calling `hdfs.project_path()`. The path resolves to the root path for your project, which is the view that you see when you click `Data Sets` in HopsWorks. To point where your actual data resides in the project you to append the full path from there to your Dataset. For example, if you create a _iris_flower_ folder in your Resources Dataset, the path to the iris_flower data would be `hdfs.project_path() + 'Resources/iris_flower'`\n",
+        "### Using the `hdfs` module\n",
+        "The `hdfs` module provides a method to get the path in HopsFS where your data is stored, namely by calling `hdfs.project_path()`. The path resolves to the root path for your project, which is the view that you see when you click `Data Sets` in HopsWorks. To point where your actual data resides in the project you to append the full path from there to your Dataset. For example if you create a mnist folder in your Resources Dataset, the path to the mnist data would be `hdfs.project_path() + 'Resources/mnist'`\n",
         "\n",
         "```python\n",
         "# Use this module to get the path to your project in HopsFS, then append the path to your Dataset in your project\n",
@@ -67,13 +68,8 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "## Serve the Iris Flower classifier"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {},
-      "source": [
+        "## Serve the Iris Flower classifier\n",
+        "\n",
         "#### Predictor script\n",
         "\n",
         "To serve a Scikit-Learn Model, write a predictor script in Python that downloads the HDFS model in the constructor and saves it as a class variable and then implements the `Predict` class and the methods `predict`, `classify` and `regress`, like this:"
@@ -154,7 +150,7 @@
           "text": [
             "Model name: irisflowerclassifier\n",
             "Model version: 1\n",
-            "Model metrics: {'accuracy': '0.98'}\n"
+            "{'accuracy': '0.98'}\n"
           ]
         }
       ],
@@ -166,7 +162,7 @@
         "\n",
         "print('Model name: ' + best_model.name)\n",
         "print('Model version: ' + str(best_model.version))\n",
-        "print('Model metrics: ' + str(best_model.training_metrics))"
+        "print(best_model.training_metrics)"
       ]
     },
     {
@@ -180,7 +176,7 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "Once all the files have been exported to the model directory (see _end_to_end_sklearn.ipynb_), we can create a serving instance that points to the model files using `serving.create_or_update()`"
+        "Once all the files are in the file system, we can create a serving instance that points to the model files using `serving.create_or_update()`"
       ]
     },
     {
@@ -202,7 +198,7 @@
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "2022-01-17 13:54:17,928 INFO: Serving irisflowerclassifier successfully created\n"
+            "2022-01-17 15:53:39,107 INFO: Serving irisflowerclassifier successfully created\n"
           ]
         }
       ],
@@ -210,15 +206,15 @@
         "# Create serving\n",
         "SERVING_NAME = MODEL_NAME\n",
         "\n",
-        "SCRIPT_PATH = hdfs.project_path() + \"/Jupyter/serving/docker_and_kubernetes/python/predictor.py\" # or .ipynb\n",
+        "SCRIPT_PATH = hdfs.project_path() + \"/Jupyter/serving/kserve/python/predictor.py\" # or .ipynb\n",
         "\n",
         "serving.create_or_update(SERVING_NAME, # define a name for the serving instance\n",
         "                         model_path=best_model.model_path, # set the path of the model to be deployed\n",
         "                         model_server=\"PYTHON\", # set the model server to run the model\n",
+        "                         kserve=True, # enable KServe\n",
         "                         predictor=SCRIPT_PATH, # set the predictor to load the model and make predictions\n",
         "                         # optional arguments\n",
         "                         model_version=best_model.version, # set the version of the model to be deployed\n",
-        "                         kserve=False, # the model will be served either with Docker or Kubernetes depending on the Hopsworks version\n",
         "                         topic_name=\"CREATE\", # topic name or CREATE to create a new topic for inference logging, otherwise NONE\n",
         "                         instances=1 # number of replicas\n",
         "                         )"
@@ -230,7 +226,7 @@
       "source": [
         "Once the serving instance is created, it will be shown in the \"Model Serving\" tab in the Hopsworks UI. You can view detailed information like server-logs and which Kafka Topic it is logging inference requests to.\n",
         "\n",
-        "![docker_sklearn_predictor_details.gif](./../../../images/docker_sklearn_predictor_details.gif)"
+        "![kserve_python_predictor_details](./../../../images/kserve_python_predictor_details.gif)"
       ]
     },
     {
@@ -257,13 +253,13 @@
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "Info: \tid: 1053,\n",
+            "Info: \tid: 1056,\n",
             "        model_path: /Projects/demo_ml_meb10000/Models/irisflowerclassifier,\n",
             "        model_version: 1,\n",
-            "        artifact_version: 1,\n",
+            "        artifact_version: 3,\n",
             "        predictor: predictor.py,\n",
             "        model_server: PYTHON,\n",
-            "        serving_tool: DEFAULT\n"
+            "        serving_tool: KSERVE\n"
           ]
         }
       ],
@@ -346,7 +342,7 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "Start the serving instance"
+        "Start new serving"
       ]
     },
     {
@@ -358,7 +354,7 @@
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "2022-01-12 13:06:13,171 INFO: Serving with name: irisflowerclassifier successfully started\n"
+            "2022-01-12 13:33:42,454 INFO: Serving with name: irisflowerclassifier successfully started\n"
           ]
         }
       ],
@@ -370,7 +366,7 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "Wait until serving instance is up and running"
+        "Wait until serving is up and running"
       ]
     },
     {
@@ -397,14 +393,14 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "![docker_sklearn_predictor_logs.gif](./../../../images/docker_sklearn_predictor_logs.gif)"
+        "![kserve_python_predictor_logs](./../../../images/kserve_python_predictor_logs.gif)"
       ]
     },
     {
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "### Send Prediction Requests to the Online Model using Hopsworks REST API"
+        "### Send Prediction Requests to the Served Model using Hopsworks REST API"
       ]
     },
     {
@@ -424,23 +420,23 @@
           "output_type": "stream",
           "text": [
             "{'predictions': [2]}\n",
-            "{'predictions': [2]}\n",
-            "{'predictions': [2]}\n",
-            "{'predictions': [2]}\n",
-            "{'predictions': [2]}\n",
-            "{'predictions': [2]}\n",
-            "{'predictions': [2]}\n",
-            "{'predictions': [1]}\n",
-            "{'predictions': [0]}\n",
-            "{'predictions': [2]}\n",
-            "{'predictions': [2]}\n",
-            "{'predictions': [2]}\n",
-            "{'predictions': [2]}\n",
-            "{'predictions': [1]}\n",
-            "{'predictions': [1]}\n",
-            "{'predictions': [2]}\n",
             "{'predictions': [0]}\n",
             "{'predictions': [1]}\n",
+            "{'predictions': [2]}\n",
+            "{'predictions': [2]}\n",
+            "{'predictions': [2]}\n",
+            "{'predictions': [0]}\n",
+            "{'predictions': [0]}\n",
+            "{'predictions': [1]}\n",
+            "{'predictions': [2]}\n",
+            "{'predictions': [2]}\n",
+            "{'predictions': [1]}\n",
+            "{'predictions': [2]}\n",
+            "{'predictions': [1]}\n",
+            "{'predictions': [2]}\n",
+            "{'predictions': [2]}\n",
+            "{'predictions': [2]}\n",
+            "{'predictions': [0]}\n",
             "{'predictions': [1]}\n",
             "{'predictions': [2]}\n"
           ]
@@ -534,25 +530,20 @@
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "serving: irisflowerclassifier, version: 1, timestamp: 1641993001908,\n",
-            "        http_response_code: 200, model_server: PYTHON, serving_tool: DEFAULT\n",
-            "predictions: 2\n",
+            "INFO -> servingId: 2, modelName: irisflowerclassifier, modelVersion: 1,requestTimestamp: 1641994517, inferenceId:5ebd3ced-8b6a-44ea-aafc-c5d6858e2c28, messageType:response\n",
+            "Predictions -> [2]\n",
             "\n",
-            "serving: irisflowerclassifier, version: 1, timestamp: 1641993001907,\n",
-            "        http_response_code: 200, model_server: PYTHON, serving_tool: DEFAULT\n",
-            "predictions: 2\n",
+            "INFO -> servingId: 2, modelName: irisflowerclassifier, modelVersion: 1,requestTimestamp: 1641994517, inferenceId:7aaba95c-77fd-418d-9963-0d2592f3cd7e, messageType:response\n",
+            "Predictions -> [0]\n",
             "\n",
-            "serving: irisflowerclassifier, version: 1, timestamp: 1641993001909,\n",
-            "        http_response_code: 200, model_server: PYTHON, serving_tool: DEFAULT\n",
-            "predictions: 2\n",
+            "INFO -> servingId: 2, modelName: irisflowerclassifier, modelVersion: 1,requestTimestamp: 1641994517, inferenceId:948f0f67-a5b5-4775-8b8a-ad8f265c294b, messageType:response\n",
+            "Predictions -> [1]\n",
             "\n",
-            "serving: irisflowerclassifier, version: 1, timestamp: 1641993002028,\n",
-            "        http_response_code: 200, model_server: PYTHON, serving_tool: DEFAULT\n",
-            "predictions: 2\n",
+            "INFO -> servingId: 2, modelName: irisflowerclassifier, modelVersion: 1,requestTimestamp: 1641994517, inferenceId:d8c1ab25-68a3-4d63-9721-7abb44432ab5, messageType:response\n",
+            "Predictions -> [2]\n",
             "\n",
-            "serving: irisflowerclassifier, version: 1, timestamp: 1641993002397,\n",
-            "        http_response_code: 200, model_server: PYTHON, serving_tool: DEFAULT\n",
-            "predictions: 2\n",
+            "INFO -> servingId: 2, modelName: irisflowerclassifier, modelVersion: 1,requestTimestamp: 1641994518, inferenceId:baef3bae-aa11-4dfe-a752-997a94d9d07f, messageType:response\n",
+            "Predictions -> [2]\n",
             "\n"
           ]
         }
@@ -561,27 +552,32 @@
         "PRINT_INSTANCES=False\n",
         "PRINT_PREDICTIONS=True\n",
         "\n",
-        "for i in range(0, 5):\n",
+        "for i in range(0, 10):\n",
         "    msg = consumer.poll(timeout=5.0)\n",
         "    if msg is not None:\n",
         "        value = msg.value()\n",
         "        try:\n",
-        "            event_dict = kafka.parse_avro_msg(value, avro_schema)\n",
+        "            event_dict = kafka.parse_avro_msg(value, avro_schema)  \n",
+        "            payload = json.loads(event_dict[\"payload\"])\n",
         "            \n",
-        "            print(\"serving: {}, version: {}, timestamp: {},\\n\"\\\n",
-        "                  \"        http_response_code: {}, model_server: {}, serving_tool: {}\".format(\n",
+        "            if (event_dict['messageType'] == \"request\" and not PRINT_INSTANCES) or \\\n",
+        "                (event_dict['messageType'] == \"response\" and not PRINT_PREDICTIONS):\n",
+        "                continue\n",
+        "            \n",
+        "            print(\"INFO -> servingId: {}, modelName: {}, modelVersion: {},\"\\\n",
+        "                  \"requestTimestamp: {}, inferenceId:{}, messageType:{}\".format(\n",
+        "                       event_dict[\"servingId\"],\n",
         "                       event_dict[\"modelName\"],\n",
         "                       event_dict[\"modelVersion\"],\n",
         "                       event_dict[\"requestTimestamp\"],\n",
-        "                       event_dict[\"responseHttpCode\"],\n",
-        "                       event_dict[\"modelServer\"],\n",
-        "                       event_dict[\"servingTool\"]))\n",
-        "            \n",
-        "            if PRINT_INSTANCES:\n",
-        "                print(\"instances: {}\\n\".format(event_dict[\"inferenceRequest\"]))\n",
-        "            if PRINT_PREDICTIONS:\n",
-        "                prediction = json.loads(event_dict[\"inferenceResponse\"])[\"predictions\"][0]\n",
-        "                print(\"predictions: {}\\n\".format(prediction))\n",
+        "                       event_dict[\"inferenceId\"],\n",
+        "                       event_dict[\"messageType\"]))\n",
+        "\n",
+        "            if event_dict['messageType'] == \"request\":\n",
+        "                print(\"Instances -> {}\\n\".format(payload['instances']))\n",
+        "                \n",
+        "            if event_dict['messageType'] == \"response\":\n",
+        "                print(\"Predictions -> {}\\n\".format(payload['predictions']))\n",
         "\n",
         "        except Exception as e:\n",
         "            print(\"A message was read but there was an error parsing it\")\n",
